@@ -1,6 +1,7 @@
 Version 0.4.8 (2012-09-14)
 --------------------------
 Serde: added support for /i as well as /ice.png
+Serde: added support for new (2012-09-12) CloudFront format
 Serde: made marketing attribution parsing more robust
 
 Version 0.4.7 (2012-09-05)
